[package]
name = "snm-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.25", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1.88"
once_cell = "1.18"
futures = "0.3"
tracing = "0.1"
chrono = "0.4.41"

[lib]
path = "src/lib.rs"
