[package]
name = "qrush"
version = "0.1.2"
edition = "2021"
authors = ["SNM Maurya <inxmaurya@gmail.com>"]
description = "Lightweight Job Queue for Rust (Actix + Redis)"
license = "MIT"
repository = "https://github.com/snmmaurya/qrush"
documentation = "https://docs.rs/qrush"
readme = "README.md"
keywords = ["actix", "redis", "job-queue", "background-jobs"]
categories = ["asynchronous", "web-programming", "concurrency"]
homepage = "https://github.com/snmmaurya/qrush"


[dependencies]
actix-web = "4.0"
redis = { version = "0.25", features = ["tokio-native-tls-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1.88"
once_cell = "1.18"
futures = "0.3"
tracing = "0.1"
chrono = "0.4.41"
tera = "1.19"
lazy_static = "1.4"
base64 = "0.22.1"
nanoid = "0.4"
csv = "1.3.1"

[lib]
path = "src/lib.rs"
