[package]
name = "qrush"
version = "0.5.0"
edition = "2021"
authors = ["SNM Maurya <sxmmaurya@gmail.com>"]
description = "Lightweight Job Queue and Task Scheduler for Rust (Actix + Redis + Cron)"
license = "MIT"
repository = "https://github.com/snmmaurya/qrush"
documentation = "https://docs.rs/qrush"
readme = "README.md"
keywords = ["actix", "redis", "job-queue", "background-jobs", "cron", "workers", "schedulers"]
categories = ["asynchronous", "web-programming", "concurrency", "cron-jobs"]
homepage = "https://github.com/snmmaurya/qrush"

[[bin]]
name = "qrush"
path = "src/bin/qrush.rs"

[dependencies]
actix-web = "4.0"
# cluster support for redis
redis = { version = "0.30.0", features = ["tokio-native-tls-comp", "cluster"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1.88"
once_cell = "1.18"
futures = "0.3"
tracing = "0.1"
chrono = "0.4.41"
tera = "1.19"
lazy_static = "1.4"
base64 = "0.22.1"
nanoid = "0.4"
csv = "1.3.1"

# CLI Dependencies
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
gethostname = "0.4"
futures-util = "0.3.31"

[lib]
path = "src/lib.rs"
